dxscale/core/batch/objects/BatchSettings__mdt/BatchSettings__mdt.object-meta.xml
<CustomObject>
    <description>Setting for running Batch Processes</description>
    <label>BatchSettings</label>
    <pluralLabel>BatchSettings</pluralLabel>
</CustomObject>