dxscale/core/batch/objects/BatchSettings__mdt/fields/Archive_Before_Days__c.field-meta.xml
<CustomField>
    <fullName>Archive_Before_Days__c</fullName>
    <description>How long ago a record is classes as archivable</description>
    <inlineHelpText>How long ago a record is classes as archivable</inlineHelpText>
    <label>Archive Before Days</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>