dxscale/core/batch/objects/BatchSettings__mdt/fields/Empty_Recycle_Bin__c.field-meta.xml
<CustomField>
    <fullName>Empty_Recycle_Bin__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If the purge should hard delete the data</description>
    <inlineHelpText>If the purge should hard delete the data</inlineHelpText>
    <label>Empty Recycle Bin</label>
    <type>Checkbox</type>
</CustomField>