dxscale/core/batch/objects/BatchSettings__mdt/fields/Summariser_Class__c.field-meta.xml
<CustomField>
    <fullName>Summariser_Class__c</fullName>
    <description>Supply this is you want to execute some summary operation on the data before delete</description>
    <label>Summariser Class</label>
    <length>100</length>
    <type>Text</type>
</CustomField>